fix: nav not showing by default

--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -66,6 +66,7 @@
     opacity: 1;
     height: 96px;
     width: 450px;
+    z-index: 100;
 
     .close-nav {
       display: none;
